--- a/grid.html
+++ b/grid.html
@@ -11,9 +11,10 @@
 
 <body>
     <div class="container">
+        
         <div class="box-1">Sale1</div>
         <div class="box-2">Product1</div>
-        <div class="box-3">Product2</div>
+        <div class="box-3">Product2<a href="dz_grid.html">NEXT →</a></div>
         <div class="box-4">Sale2</div>
         <div class="box-5">Product3</div>
         <div class="box-6">Product4</div>
