--- a/dz_grid.html
+++ b/dz_grid.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="box-1"> Header </div>
+        <div class="box-1"><a href="grid.html">← BACK</a> Header <a href="dz_flex.html">NEXT →</a></div>
         <div class="box-2"> Navigation </div>
         <div class="box-3"> Aside </div>
         <div class="box-4"> Content </div>
