--- a/dz_flex.html
+++ b/dz_flex.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header><a href="dz_grid.html">← BACK</a>Header<a href="grid.html">NEXT →</a></header>
+    <header><a href="dz_grid.html">← BACK</a>Header<a href="index.html">NEXT →</a></header>
     <nav>Naviganion</nav>
     <div class="co">
         <div class="con">
